copy changes and min height changes

--- a/wp-content/themes/evokelabs2013/css/evokelabs.css
+++ b/wp-content/themes/evokelabs2013/css/evokelabs.css
@@ -149,9 +149,8 @@ h2 {
 #about {
   max-width: 870px;
   margin: 0 auto;
-  min-height: 500px;
+  min-height: 465px;
   padding-top: 15px;
-  padding-bottom: 15px;
 }
 
 h3,
@@ -1008,7 +1007,7 @@ footer li {
 
   #about {
     width: 90%;
-    min-height: 320px;
+    min-height: 300px;
   }
 
   #aboutdesc {
@@ -1290,15 +1289,21 @@ footer li {
   }
 }
 
-@media all and (max-width: 580px) {
+@media all and (max-width: 590px) {
   #about {
-    min-height: 350px;
+    min-height: 340px;
   }
 }
 
-@media all and (max-width: 420px) {
+@media all and (max-width: 580px) {
   #about {
-    min-height: 470px;
+    min-height: 370px;
+  }
+}
+
+@media all and (max-width: 430px) {
+  #about {
+    min-height: 420px;
   }
   #skills-resume-left li {
     height: auto;
@@ -1306,5 +1311,35 @@ footer li {
 
   #skills-resume-left li p {
     display: inline;
+  }
+}
+
+@media all and (max-width: 400px) {
+  #about {
+    min-height: 450px;
+  }
+}
+
+@media all and (max-width: 360px) {
+  #about {
+    min-height: 470px;
+  }
+}
+
+@media all and (max-width: 340px) {
+  #about {
+    min-height: 490px;
+  }
+}
+
+@media all and (max-width: 300px) {
+  #about {
+    min-height: 570px;
+  }
+}
+
+@media all and (max-width: 280px) {
+  #about {
+    min-height: 620px;
   }
 }
